--- a/photo.html
+++ b/photo.html
@@ -10,7 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/croissant/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <title>croissant-Gallery</title>
   </head>
   <body>
