add SEO to website

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./styles.css" />
-    <title>croissant-Contact</title>
+    <title>croissant TiTop group Contact</title>
   </head>
   <body>
     <h1 class="mb-5">Croissant Group</h1>
