--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <meta
+      name="description"
+      content="A croissant is a buttery, flaky, Austrian viennoiserie pastry inspired by
+      the shape of the Austrian kipferl but using the French yeast-leavened
+      laminated dough."
+    />
     <link rel="stylesheet" href="./styles.css" />
-    <title>croissant</title>
+    <title>croissant is a delicious snack | TiTop</title>
   </head>
   <body>
     <h1 class="mb-5">🥐 Everything about Croissant 🥐</h1>
@@ -27,17 +33,20 @@
     <div class="container d-flex justify-content-around">
       <a
         href="./"
+        alt="home page"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
         >Home page</a
       >
       <a
         href="./contact.html"
+        alt="contact to tiptop group"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
         Contact
       </a>
       <a
         href="./photo.html"
+        alt="see more image about Croissant"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
         Photos
