--- a/photo.html
+++ b/photo.html
@@ -10,6 +10,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    
     <link rel="stylesheet" href="./styles.css" />
     <title>croissant-Gallery</title>
   </head>
@@ -17,11 +18,11 @@
     <h1 class="mb-5">Croissant Photos</h1>
    
     <div class="container d-flex justify-content-around">
-                      <img src="./images/4.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="">
+                      <img src="./images/4.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="delicious croissant">
 
-                      <img src="./images/3.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="">
+                      <img src="./images/3.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="yammy Croissant">
 
-                      <img src="./images/2.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="">
+                      <img src="./images/2.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="how to serve croissant">
 
     </div>
 
