add SEO to website

--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,12 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <meta
+      name="description"
+      content="You can get in touch with TiTop Group and live your comment "
+    />
     <link rel="stylesheet" href="./styles.css" />
-    <title>croissant TiTop group Contact</title>
+    <title>croissant TiTop group Contact| TiTop Group</title>
   </head>
   <body>
     <h1 class="mb-5">Croissant Group</h1>
@@ -24,19 +28,19 @@
       <a
         href="./"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
-        >Home page</a
+        >TiTop Home page</a
       >
       <a
         href="./contact.html"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
-        Contact
+        Contact TiTop Group
       </a>
       <a
         href="./photo.html"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
-        Photos
+        Croissant Gallery
       </a>
     </div>
   </body>
