--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
         href="./"
         alt="home page"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
-        >Home page</a
-      >
+        >TiTop Home page
+      </a>
       <a
         href="./contact.html"
         alt="contact to tiptop group"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
-        Contact
+        Contact TiTop Group
       </a>
       <a
         href="./photo.html"
         alt="see more image about Croissant"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
-        Photos
+        Croissant Gallery
       </a>
     </div>
   </body>
