--- a/photo.html
+++ b/photo.html
@@ -12,10 +12,11 @@
     />
     
     <link rel="stylesheet" href="./styles.css" />
-    <title>croissant-Gallery</title>
+    <title>croissant-Gallery | TiTop Group</title>
   </head>
+  <meta name="description" content="You can see the lovely Croissant from TipTop Group">
   <body>
-    <h1 class="mb-5">Croissant Photos</h1>
+    <h1 class="mb-5">Croissant Gallery </h1>
    
     <div class="container d-flex justify-content-around">
                       <img src="./images/4.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="delicious croissant">
@@ -30,19 +31,19 @@
       <a
         href="./"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
-        >Home page</a
+        >TiTop Home page</a
       >
       <a
         href="./contact.html"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
-        Contact
+        Contact TiTop Group
       </a>
       <a
         href="./photo.html"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
-        Photos
+        Croissant Gallery 
       </a>
     </div>
     </div>
