--- a/photo.html
+++ b/photo.html
@@ -19,11 +19,11 @@
     <h1 class="mb-5">Croissant Gallery </h1>
    
     <div class="container d-flex justify-content-around">
-                      <img src="./images/4.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="delicious croissant">
+                      <img src="./images/4.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="delicious croissant" title="delicious croissant">
 
-                      <img src="./images/3.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="yammy Croissant">
+                      <img src="./images/3.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="yammy Croissant" title="yammy Croissant">
 
-                      <img src="./images/2.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="how to serve croissant">
+                      <img src="./images/2.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="how to serve croissant" title="serve croissant">
 
     </div>
 
