--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <h1 class="mb-5">🥐 Everything about Croissant 🥐</h1>
+    <h2>Croissant interesting facts</h2>
     <p>
       A croissant is a buttery, flaky, Austrian viennoiserie pastry inspired by
       the shape of the Austrian kipferl but using the French yeast-leavened
