fixed the errors

--- a/contact.html
+++ b/contact.html
@@ -27,17 +27,23 @@
     <div class="container d-flex justify-content-around">
       <a
         href="./"
+        title="home page"
+        alt="home page"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
         >TiTop Home page</a
       >
       <a
         href="./contact.html"
+        title="Contact with TiTop Group"
+        alt="contact to tiptop group"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
         Contact TiTop Group
       </a>
       <a
         href="./photo.html"
+        title="Croissant Gallery"
+        alt="see more image about Croissant"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
         Croissant Gallery
