--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
       <a
         href="./"
         alt="home page"
+        title="home page"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
         >TiTop Home page
       </a>
       <a
         href="./contact.html"
         alt="contact to tiptop group"
+        title="Contact with TiTop Group"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
         Contact TiTop Group
@@ -48,6 +50,7 @@
       <a
         href="./photo.html"
         alt="see more image about Croissant"
+        title="Croissant Gallery"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
         Croissant Gallery
