--- a/photo.html
+++ b/photo.html
@@ -19,9 +19,9 @@
     <h1 class="mb-5">Croissant Gallery </h1>
    
     <div class="container d-flex justify-content-around">
-                      <img src="./images/4.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="delicious croissant" title="delicious croissant">
+                      <img src="./images/4.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="delicious croissant" >
 
-                      <img src="./images/3.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="yammy Croissant" title="yammy Croissant">
+                      <img src="./images/3.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="yammy Croissant" >
 
                       <img src="./images/2.jpeg" class="img-fluid rounded img-thumbnail img-size me-2" alt="how to serve croissant" title="serve croissant">
 
@@ -31,16 +31,24 @@
       <a
         href="./"
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
+        title="home page"
+         alt="home page"
         >TiTop Home page</a
       >
       <a
         href="./contact.html"
+        title="Contact with TiTop Group"
+                alt="contact to tiptop group"
+
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
         Contact TiTop Group
       </a>
       <a
         href="./photo.html"
+        title="Croissant Gallery"
+                alt="see more image about Croissant"
+
         class="btn p-4 border-1 border-color shadow me-2 mt-5 rounded btn-color"
       >
         Croissant Gallery 
